[package]
name = "cylinder-image-renamer"
version = "0.1.0"
description = "AI-assisted cylinder number image renamer"
authors = ["strawberryCao"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "bmp", "gif"] }
rfd = "0.15"
regex = "1"
keyring = { version = "3", features = ["windows-native"] }
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
